Simple RESTful calculator web service

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 ################################################################################
 
 /.vs
+*.suo
+*.user
+_ReSharper.*
+bin
+obj
+packages
+/Calculator/.vs
